--- a/notTidyHpInfo/000testSite001/css/common.css
+++ b/notTidyHpInfo/000testSite001/css/common.css
@@ -39,10 +39,10 @@ background-color: #808000; /* ヘッダの背景色 */
 /********************************************************************************************************************/
 /* --- ナビゲーション --- */
 #nav {
-float: left;
-width: 18%; /* サイドバーの幅 */
-padding: 0 0 0 0; /* [上][右][下][左] */
-border-right: 0px #00C000 solid; /* 右の境界線 */
+  float: left;
+  width: 18%; /* サイドバーの幅 */
+  padding: 0 0 0 0; /* [上][右][下][左] */
+  border-right: 0px #00C000 solid; /* 右の境界線 */
 }
 /********************************************************************************************************************/
 /* --- メインカラム --- */
@@ -100,9 +100,20 @@ h1::after {
 /********************************************************************************************************************/
 /* --- タイトル（中分類） --- */
 h2 {
-    padding: .25em 0 .5em .75em;
+    padding: .25em 0 .5em 1.5em; /* [上][右][下][左] */
     border-left: 6px solid #ccc;
     border-bottom: 1px solid #ccc;
+    position:relative;
+}
+/* 矢印 */
+h2:before{
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 5px;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 12px solid #00C000;
 }
 /********************************************************************************************************************/
 /* --- タイトル（小分類） --- */
@@ -201,6 +212,15 @@ ul {
 /* ★こここからオリジナル  */
 /********************************************************************************************************************/
 /*
+ * メニュー文字列
+ */
+#menuString {
+	width: 135px;
+	display: table-cell;
+	vertical-align: top;
+}
+/********************************************************************************************************************/
+/*
  * サイドメニュー
  */
 #slide_menu{
@@ -209,9 +229,12 @@ ul {
     left: -135px;
     width: 135px;
     height: 100%;
+    /*overflow:auto;*/
     /*background: #E87272; 色*/
     background: gray;
 }
+
+
 /********************************************************************************************************************/
 /*
  * 親メニュー
@@ -219,8 +242,8 @@ ul {
 #dropmenu {
   list-style-type: none;
   width: 670px; /* 全体の長さ（ここ以外は、%で表す） */
-  margin: 30px auto 0px;
-  padding: 0;
+  margin: 0px auto 0px;
+  padding: 0 0 0 0; /* [上][右][下][左] */
 }
 #dropmenu li {
   position: relative;
@@ -404,5 +427,19 @@ ul {
 }
 #searchBtn2 {
     height: 40px;
+}
+/********************************************************************************************************************/
+/*
+ * 画像の大きさ調整
+ */
+p.resizeimage {
+    display: table-cell; /*上下中央*/
+    text-align: center; /*左右中央*/
+    vertical-align: middle; /*上下中央*/
+    layout-grid-line:166px; /*IE7*/
+}
+p.resizeimage img {
+	width: 95%;
+	vertical-align: middle;/*IE7*/
 }
 /********************************************************************************************************************/
