フレーム内のリンク問題が解決

--- a/notTidyHpInfo/000testSite002/css/common.css
+++ b/notTidyHpInfo/000testSite002/css/common.css
@@ -226,7 +226,7 @@ ul {
     width: 158px;
     height: 10000px;
     background: gray;
-
+    z-index: 999;  /*そこそこ最前線にする */
 }
 /********************************************************************************************************************/
 /*
