--- a/notTidyHpInfo/000testSite002/css/common.css
+++ b/notTidyHpInfo/000testSite002/css/common.css
@@ -348,6 +348,11 @@ ul {
 	display: table-cell;
 	vertical-align: top;
 }
+.box4 {
+	width: 40px;
+	display: table-cell;
+	vertical-align: top;
+}
 /********************************************************************************************************************/
 /*
  * メニューボタン
@@ -406,6 +411,13 @@ ul {
 #panel-btn .close:after{
   transform: rotate(-135deg);
   -webkit-transform: rotate(-135deg);
+}
+/********************************************************************************************************************/
+/*
+ * 「homeへ」ボタン
+ */
+#homeImg {
+    height: 40px;
 }
 /********************************************************************************************************************/
 /*
